fix - overflow scroll index page

--- a/pages/boutique-en-ligne-maroc.module.sass
+++ b/pages/boutique-en-ligne-maroc.module.sass
@@ -51,21 +51,6 @@
   font-size: 38px
   color: #FF9DBF
   line-height: 38px
-.thirdSectionBox
-  background-color: $primary
-  padding-top: 63px
-  padding-bottom: 63px
-.thirdSectionHeader
-  +Medium
-  font-size: 32px
-  color: #FFFFFF
-  line-height: 48px
-  margin: 0
-.thirdSectionActionButton
-  background-color: $primary !important
-  color: #FFFFFF !important
-  width: 220px !important
-  border: 1px solid #FFFFFF !important
 @media #{$tablette}
   .mainSectionActionButton
     width: fit-content !important
@@ -75,10 +60,6 @@
     padding-left: 25px
     padding-right: 25px
   .sectionMobileStack
-    flex-direction: column
-    align-items: center
-  .mobileRootMain
-    padding-bottom: 25px
     flex-direction: column
     align-items: center
   .sectionMobileStackPartTwo
@@ -117,18 +98,5 @@
     margin-top: 84px !important
   .mobileRootSection
     margin-bottom: 84px
-  .thirdSectionBox
-    padding: 66px 25px 45px 25px
-  .thirdSectionHeader
-    +SemiBold
-    margin-top: 34px
-    font-size: 22px
-    letter-spacing: -0.01em
-    line-height: 29px
-    text-align: center
-  .mobileThirdSection
-    margin: 0 !important
-  .actionButtonRootBox
-    align-self: center !important
 // @media #{}
 // @media #{}
