--- a/pages/index.module.sass
+++ b/pages/index.module.sass
@@ -106,21 +106,8 @@
   padding: 10px
   object-fit: cover
   border-radius: 50%
-.thirdSectionBox
-  background-color: $primary
-  padding-top: 63px
-  padding-bottom: 63px
-.thirdSectionHeader
-  +Medium
-  font-size: 32px
-  color: #FFFFFF
-  line-height: 48px
-  margin: 0
-.thirdSectionActionButton
-  background-color: $primary !important
-  color: #FFFFFF !important
-  width: 220px !important
-  border: 1px solid #FFFFFF !important
+.newShopsStackWrapper
+  overflow-x: scroll
 @media #{$tablette}
   .main
     padding: 16px 0 32px 0 !important
@@ -149,23 +136,6 @@
   .newShopsStackWrapper
     align-items: center
     justify-content: center
-  .mobileRootMain
-    padding-bottom: 25px
-    flex-direction: column
-    align-items: center
-  .mobileThirdSection
-    margin: 0 !important
-  .thirdSectionHeader
-    +SemiBold
-    margin-top: 34px
-    font-size: 22px
-    letter-spacing: -0.01em
-    line-height: 29px
-    text-align: center
-  .actionButtonRootBox
-    align-self: center !important
-  .thirdSectionBox
-    padding: 32px
   .visitShopButton
     width: 230px !important
 // @media #{$tablette}
